# MAI

BD/: README.md
BD/BD 2/: отчет по БД1 Андрюшин 312.docx  отчет по БД2 Андрюшин 312.docx
BD/Board Games Library/: 123  add_copies.py  add_game.py  admin_dashboard.py  admin_rented_games.py  app.py  authentication.py  board_games  client_dashboard.py  client_data.py  database.py  delete_game.py  display_clients.py  finish_rental.py  game_list.py  rent_game.py  rented_games.py  show_copies_count.py
Computer graphics/ 3/: 1.txt  CMakeLists.txt  main.cpp
Computer graphics/ 4/: CMakeLists.txt  fragment_shader.glsl  main.cpp  utils.cpp  utils.h
Computer graphics/ 5/: CMakeLists.txt
Computer graphics/ 5/src/: main.cpp
Computer graphics/ 5/src/shapes/: Sphere.hpp
Computer graphics/1/: CMakeLists.txt  main.cpp
Computer graphics/2/: main.cpp
OS/OSI 5-7/doc/: report_os_lab6-8.docx
OS/OSI 5-7/os-lab-5-7/: CalculationNode.h  Client.cpp  Server.cpp  Tree.h  ZmqCommands.h  client  makefile  server
OS/OSI 5-7/src/: BalancedTree.h  CMakeLists.txt  CalculationNode.h  Client.cpp  Server.cpp  ZMQFunctions.h  clean-all.cmake
cryptography/: Криптография 1.docx  Криптография 2.docx  Криптография 3.docx  Криптография 4.docx  Курсовая по криптографии.docx
discrete analysis/: readme.md
discrete analysis/1/: main.cpp
discrete analysis/2/: main.cpp
discrete analysis/4/: main.cpp
discrete analysis/5/: main.cpp
discrete analysis/7/: main.cpp
discrete analysis/8/: main.cpp
discrete analysis/9/: main.cpp
discrete analysis/KP/: main.cpp  Без имени 1.odt
functional analysis/: README.md
numeric methods/: 1_1.py  1_2.py  1_3.py  1_4.py  1_5.py  2_1.py  2_2.py  3_1.py  3_2.py  3_3.py  3_4.py  3_5.py  4_1.py  4_2_1.py  4_2_2.py  README.md  input.txt  input1.2txt  input1_1test.txt  input1_3.txt  input1_4.txt  input1_5.txt  Отчет.docx
others/: Отчет по практике 2025.docx  менеджмент.docx
